--- a/05-Combing-React-Hooks-REST-Example/_experimental/M3-clip10-useMemo-to-Cache-Speaker-Sorted-Data/static/site.css
+++ b/05-Combing-React-Hooks-REST-Example/_experimental/M3-clip10-useMemo-to-Cache-Speaker-Sorted-Data/static/site.css
@@ -55,4 +55,16 @@
 }
 
 
+.heartorangebutton
+{
+    background-image:  url('/static/heart-orange.png');
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    background-repeat: no-repeat;
+    width: 25px;
+    height: 25px;
+    float: right;
+}
+
 
